update satis link

--- a/composer.json
+++ b/composer.json
@@ -24,10 +24,7 @@
   "repositories": [
     {
       "type": "composer",
-      "url": "http://satis.test.flash-global.net"
+      "url": "https://composer.flash-global.net"
     }
-  ],
-  "config": {
-    "secure-http": false
-  }
+  ]
 }
