--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,8 @@
     "codeception/codeception": "^2.2"
   },
   "require": {
-      "fei/entities": "1.*",
-      "fei/api-client": "dev-develop",
-      "fei/logger-common": "dev-develop"
+      "fei/api-client": "1.*",
+      "fei/logger-common": "1.*"
   },
   "repositories": [
     {
