--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
   },
   "require": {
       "fei/api-client": "1.*",
-      "fei/logger-common": "1.*"
+      "fei/logger-common": "1.*",
+      "doctrine/orm": "^2.5"	
   },
   "repositories": [
     {
