--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "require": {
       "fei/api-client": "1.*",
       "fei/logger-common": "1.*",
-      "doctrine/orm": "^2.5"	
+      "doctrine/orm": "~2.5"	
   },
   "repositories": [
     {
