--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
   },
   "require-dev": {
     "fzaninotto/faker": "^1.6",
-    "codeception/codeception": "^2.2"
+    "codeception/codeception": "^2.2",
+    "doctrine/orm": ">=2.5"
   },
   "require": {
       "fei/api-client": "1.*",
