--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     "doctrine/orm": ">=2.5"
   },
   "require": {
-      "fei/api-client": "1.*",
-      "fei/logger-common": "1.*"
+      "fei/api-client": "^1.0.5",
+      "fei/logger-common": "^1.1.20"
   },
   "repositories": [
     {
