--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,27 @@
 {
-    "name": "fei/logger-client",
-    "type": "library",
-    "license": "Proprietary",
-    "autoload": {
-        "psr-4": {
-            "Fei\\Service\\Logger\\Client\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Jerome Schaeffer",
-            "email": "jsc@opcoding.eu"
-        }
-    ],
-    "require": {
-        "fei/api-client": "^1.1.0",
-        "fei/logger-common": "^1.1.20"
-    },
-    "require-dev": {
-        "fzaninotto/faker": "^1.6",
-        "codeception/codeception": "^2.2"
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://composer.flash-global.net"
-        }
-    ]
+  "name": "fei/logger-client",
+  "type": "library",
+  "description": "Client side logger",
+  "autoload": {
+    "psr-4": {
+      "Fei\\Service\\Logger\\Client\\": "src/"
+    }
+  },
+  "license": "GPL-3.0",
+  "authors": [
+    {
+      "name": "Yoctu",
+      "email": "contact@yoctu.com",
+      "homepage": "http://yoctu.com/"
+    }
+  ],
+  "require": {
+    "fei/api-client": "^1.1.0",
+    "fei/logger-common": "^1.1.20"
+  },
+  "require-dev": {
+    "fzaninotto/faker": "^1.6",
+    "codeception/codeception": "^2.2",
+    "squizlabs/php_codesniffer": "3.*"
+  }
 }
