--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,11 @@ install:
     - composer self-update
     - composer install
 
-script: vendor/bin/codecept run unit
+script:
+    - vendor/bin/codecept run unit
+    - vendor/bin/phpcs src
+Psr\Log\LoggerInterface
+notifications:
+  email:
+    on_success: never
+    on_failure: change
