--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
     }
   ],
   "require": {
+    "php": "^7.0",
     "fei/api-client": "^1.1.0",
-    "fei/logger-common": "^1.1.20"
+    "fei/logger-common": "^1.1.20",
+    "psr/log": "^1.0"
   },
   "require-dev": {
     "fzaninotto/faker": "^1.6",
