--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ install:
     - composer self-update
     - composer install
 
+cache:
+    directories:
+        - $HOME/.composer/cache
+
 script:
     - vendor/bin/codecept run unit
     - vendor/bin/phpcs src
