--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "fei/api-client": "^1.1.0",
-    "fei/logger-common": "^1.1.20"
+    "fei/logger-common": "^1.1.20",
+    "yoctu/api-guardian": "^1.0"
   },
   "require-dev": {
     "fzaninotto/faker": "^1.6",
